# mvvm-skeleton

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/zawalich/roszak/inposter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp
app/src/main/java/zawalich/roszak/inposter/: InPosterApplication.kt
app/src/main/java/zawalich/roszak/inposter/dagger/: InPosterApplicationComponent.kt  InPosterApplicationModule.kt
app/src/main/java/zawalich/roszak/inposter/extensions/: Any.kt  ApplicationExtension.kt
app/src/main/java/zawalich/roszak/inposter/imaging/: InposterTransformation.kt
app/src/main/java/zawalich/roszak/inposter/model/: InposterColor.kt  InposterValue.kt  Permission.kt  PhotoQuality.kt
app/src/main/java/zawalich/roszak/inposter/navigation/: ContextModel.kt  EnumBasedViewClassResolverStrategy.kt  NavigationAware.kt  NavigationOnRegionsService.kt  NavigationService.kt  ScreenContextEnum.kt  ScreenRegion.kt  ViewClassResolver.kt
app/src/main/java/zawalich/roszak/inposter/opencv/: BaseCvCameraViewListener2.java  CameraBridgeViewBase2.java  DetectionBasedTracker.java  FaceDetectionCameraViewListener2.java  OCVCameraView.java  (+1 more)
app/src/main/res/layout/: activity_main.xml  dialog_color_picker.xml  dialog_rationale.xml  dialog_value_picker.xml  fragment_camera_screen.xml  fragment_preview_screen.xml  fragment_sample_screen.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/zawalich/roszak/inposter/: ExampleUnitTest.kt
(+33 files in other folders)
